--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: DARIA의 좌충우돌 기술 이야기
+subtitle:이것저것 공부한 것들을 저장하는 장소입니다
 use-site-title: true
 ---
 
